# Slicer-TransformSmoother

./: CMakeLists.txt  README.md
TransformSmoother/: CMakeLists.txt  qSlicerTransformSmootherModule.cxx  qSlicerTransformSmootherModule.h  qSlicerTransformSmootherModuleWidget.cxx  qSlicerTransformSmootherModuleWidget.h
TransformSmoother/Logic/: vtkSlicerTransformSmootherLogic.cxx  vtkSlicerTransformSmootherLogic.h
TransformSmoother/MRML/: CMakeLists.txt  vtkMRMLTransformSmootherNode.cxx  vtkMRMLTransformSmootherNode.h
TransformSmoother/Resources/: qSlicerTransformSmootherModule.qrc
TransformSmoother/Resources/UI/: qSlicerTransformSmootherFooBarWidget.ui  qSlicerTransformSmootherModuleWidget.ui
TransformSmoother/Widgets/: qSlicerTransformSmootherFooBarWidget.cxx  qSlicerTransformSmootherFooBarWidget.h
